package utils;

public enum Counties {
    LA, ORANGE, SAN_BERNARDINO
}
